** automatic listing of include directories for external code (even better :) )
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6550 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -947,6 +947,7 @@ else()
 	
 	## create code that allows to call find_package()
 	## (must come after the above code!)
+	get_directory_property(OPENMS_INCLUDE_DIRS  INCLUDE_DIRECTORIES)
 	configure_file(
 		"${PROJECT_SOURCE_DIR}/cmake/OpenMSConfig.cmake.in"
 		"${PROJECT_BINARY_DIR}/cmake/OpenMSConfig.cmake"
