** renamed methods like min() and max() to something else due to macros 'min' and 'max' defined in windows.h
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6596 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,7 +98,7 @@ elseif (MSVC)
 
 	## disable min and max macros by default
 	## see CGAL and BOOST configs for more elaborate explanations
-	add_definitions(/DNOMINMAX)
+	#add_definitions(/DNOMINMAX)
 
 	## xerces bug workaround
 	add_definitions(/DOPENMS_XERCESDLL)
