** added dependencies and broke a tutorial on purpose to see if it shows up in the nightly build as error
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6599 6adb6e08-d915-0410-941f-83917bcadc18

--- a/source/TEST/CMakeLists.txt
+++ b/source/TEST/CMakeLists.txt
@@ -90,7 +90,13 @@ endforeach(i)
 
 ### "test_build" target
 add_custom_target(test_build)
-add_dependencies(test_build ${TEST_executables} TOPP FuzzyDiff)
+add_dependencies(test_build ${TEST_executables} TOPP UTILS)
+
+### all target that we require to show up in the targets list
+### and in the nightly build log (to test if they can be build properly)
+add_custom_target(extra_targets)
+add_dependencies(extra_targets Tutorials_build)
+
 
 ### add filenames to Visual Studio solution tree
 set(sources_VS)
