** added preliminary GUI testing framework
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6601 6adb6e08-d915-0410-941f-83917bcadc18

--- a/source/TEST/CMakeLists.txt
+++ b/source/TEST/CMakeLists.txt
@@ -76,17 +76,39 @@ add_dependencies(TRANSFORMATIONS_TEST ${transformations_executables_list})
 add_custom_target(SIMULATION_TEST)
 add_dependencies(SIMULATION_TEST ${simulation_executables_list})
 
-if (CMAKE_COMPILER_IS_INTELCXX OR CMAKE_COMPILER_IS_GNUCXX)
-	set(${CMAKE_CXX_FLAGS_RELEASE} ${CMAKE_CXX_FLAGS_RELEASE_SAVED})
-endif()
-
-										
 ### tests
 foreach(i ${TEST_executables})
 	add_executable(${i} ${i}.C)
 	target_link_libraries(${i} ${OPENMS_LIBRARIES})
 	add_test(${i} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${i})
 endforeach(i)
+
+## GUI tests special treatment
+### Apply MOC compiler to GUI
+set(GUI_executables_list_C)
+foreach(i ${GUI_executables_list})
+  list(APPEND GUI_executables_list_C GUI/${i}.C)
+endforeach(i)
+## create mocced files - they are included manually in the implementation files
+QT4_WRAP_CPP(mocced_GUI_executables_list_C ${GUI_executables_list_C})
+
+add_custom_target(GUI_MOC_SOURCES SOURCES ${mocced_GUI_executables_list_C})
+
+foreach(i ${GUI_executables_list})
+	add_executable(${i} GUI/${i}.C)
+	add_dependencies(${i} GUI_MOC_SOURCES)
+	target_link_libraries(${i} ${OPENMS_LIBRARIES})
+	add_test(${i} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${i})
+endforeach(i)
+
+### GUI tests
+add_custom_target(GUI_TEST)
+add_dependencies(GUI_TEST ${GUI_executables_list})
+
+
+if (CMAKE_COMPILER_IS_INTELCXX OR CMAKE_COMPILER_IS_GNUCXX)
+	set(${CMAKE_CXX_FLAGS_RELEASE} ${CMAKE_CXX_FLAGS_RELEASE_SAVED})
+endif()
 
 ### "test_build" target
 add_custom_target(test_build)
