** added TOPP, UTILS and tutorials to ALL target in tests
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6615 6adb6e08-d915-0410-941f-83917bcadc18

--- a/source/TEST/CMakeLists.txt
+++ b/source/TEST/CMakeLists.txt
@@ -109,12 +109,12 @@ if (CMAKE_COMPILER_IS_INTELCXX OR CMAKE_COMPILER_IS_GNUCXX)
 endif()
 
 ### "test_build" target
-add_custom_target(test_build)
+add_custom_target(test_build ALL)
 add_dependencies(test_build ${TEST_executables} TOPP UTILS)
 
 ### all target that we require to show up in the targets list
 ### and in the nightly build log (to test if they can be build properly)
-add_custom_target(extra_targets)
+add_custom_target(extra_targets ALL)
 add_dependencies(extra_targets Tutorials_build)
 
 
