moved code to transfer subelements from consensus input to output (now available for all algorithms), updated tests
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.8@7988 6adb6e08-d915-0410-941f-83917bcadc18

--- a/source/TEST/TOPP/FeatureLinker_8_parameters.ini
+++ b/source/TEST/TOPP/FeatureLinker_8_parameters.ini
@@ -7,13 +7,13 @@
       </ITEMLIST>
       <ITEM name="out" value="" type="string" description="Output file (valid formats: &apos;consensusXML&apos;)" tags="output file" />
       <ITEM name="type" value="unlabeled_qt" type="string" description="Feature grouping algorithm type" restrictions="labeled,unlabeled,unlabeled_qt" />
+      <ITEM name="keep_subelements" value="true" type="string" description="If set, the sub-features of the inputs are transferred to the output." restrictions="true,false" />
       <ITEM name="log" value="" type="string" description="Name of log file (created only when specified)" tags="advanced" />
       <ITEM name="debug" value="0" type="int" description="Sets the debug level" tags="advanced" />
       <ITEM name="threads" value="1" type="int" description="Sets the number of threads allowed to be used by the TOPP tool" />
       <ITEM name="no_progress" value="false" type="string" description="Disables progress logging to command line" tags="advanced" restrictions="true,false" />
       <ITEM name="test" value="false" type="string" description="Enables the test mode (needed for internal use only)" tags="advanced" restrictions="true,false" />
       <NODE name="algorithm" description="Algorithm parameters section">
-        <ITEM name="keep_subelements" value="true" type="string" description="Use subelements of consensusXML for output" restrictions="true,false" />
         <ITEM name="use_identifications" value="false" type="string" description="Never link features that are annotated with different peptides (only the best hit per peptide identification is taken into account)." restrictions="true,false" />
         <NODE name="diff_exponent" description="Absolute position differences are raised to this power (e.g. 1 for &apos;linear&apos; distance, 2 for &apos;quadratic&apos; distance).">
           <ITEM name="RT" value="1" type="float" description="RT differences are raised to this power" tags="advanced" restrictions="0:" />
